@@ -1,15 +1,11 @@
 require 'spec/rake/spectask'
 
-plugin_specs = FileList['vendor/plugins/**/spec/**/*_spec.rb']
-
 desc 'Run all model and controller specs'
 task :spec do
   Rake::Task["spec:models"].invoke      rescue got_error = true
   Rake::Task["spec:controllers"].invoke rescue got_error = true
   Rake::Task["spec:views"].invoke       rescue got_error = true
-  unless plugin_specs.empty? 
-    Rake::Task["spec:plugins"].invoke   rescue got_error = true
-  end
+  Rake::Task["spec:plugins"].invoke     rescue got_error = true
   
   # not yet supported
   #if File.exist?("spec/integration")
@@ -37,11 +33,9 @@ namespace :spec do
     t.spec_files = FileList['spec/views/**/*_spec.rb']
   end
   
-  unless plugin_specs.empty?
-    desc "Run the specs under vendor/plugins"
-    Spec::Rake::SpecTask.new(:plugins => "db:test:prepare") do |t|
-      t.spec_files = plugin_specs
-    end
+  desc "Run the specs under vendor/plugins"
+  Spec::Rake::SpecTask.new(:plugins => "db:test:prepare") do |t|
+    t.spec_files = FileList['vendor/plugins/**/spec/**/*_spec.rb']
   end
 
   desc "Print Specdoc for all specs"
